antlr/src/main/java/redocpot/rltna/actions/tools/Expr.g4
grammar Expr;

@header {
package tools;
import java.util.*;
}

@parser::members {
    Map<String, Integer> memory = new HashMap<String, Integer>();

    int eval(int left, int op, int right) {
        switch (op) {
            case MUL: return left * right;
            case DIV: return left / right;
            case ADD: return left + right;
            case SUB: return left - right;
        }
        return 0;
    }
}

stat : e NEWLINE            { System.out.println($e.v); }
     | ID '=' e NEWLINE     { memory.put($ID.text, $e.v); }
     | NEWLINE
     ;

e returns [int v]
     : a=e op=('*' | '/') b=e   { $v = eval($a.v, $op.type, $b.v); }
     | a=e op=('+' | '-') b=e   { $v = eval($a.v, $op.type, $b.v); }
     | INT                      { $v = $INT.int; } 
     | ID
        {
            String id = $ID.text;
            $v = memory.containsKey(id) ? memory.get(id) : 0;
        }
     | '(' e ')'                { $v = $e.v; }
     ;

MUL : '*';
DIV : '/';
ADD : '+';
SUB : '-';

INT : '0' | [1-9] [0-9]* ;

ID : '.' (LETTER | '_' | '.') (LETTER | DIGIT | '_' | '.')*
   | LETTER (LETTER | DIGIT | '_' | '.')*
   ;

fragment LETTER : [a-zA-Z] ;
fragment DIGIT : [0-9] ;

NEWLINE : '\r'? '\n' ;

WS : [ \t\n\r]+ -> skip ;
